--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akhilesh Gangwar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
     <header>
-        
+
     </header>
     <h1 class="resume">Resume</h1>
     <div>
@@ -22,14 +24,16 @@
         <p class="address">Email ID: akhileshgangwar24@gmail.com</p>
         <p class="address">Phone No.: +91-7983580439</p>
         <p class="address">Address: Bareilly, U.P., India </p>
-        <p class="address">LinkedIn: <a href="https://www.linkedin.com/in/akhilesh-gangwar/">https://www.linkedin.com/in/akhilesh-gangwar/</a>
+        <p class="address">LinkedIn: <a
+                href="https://www.linkedin.com/in/akhilesh-gangwar/">https://www.linkedin.com/in/akhilesh-gangwar/</a>
         </p>
         <p class="address">GitHub: <a href="https://github.com/akhileshgangwar">https://github.com/akhileshgangwar</a>
         </p>
     </div>
     <h1 class="heading">OBJECTIVE</h1>
     <div class="objective">
-        <p>To put my abilities and learning skills in a positive atmosphere. To learn and implement new skills and make effective contribution for the betterment of the organization.</p>
+        <p>To put my abilities and learning skills in a positive atmosphere. To learn and implement new skills and make
+            effective contribution for the betterment of the organization.</p>
     </div>
     <h1 class="heading">ACADEMIC PROFILE</h1>
     <table class="table_center">
@@ -116,13 +120,30 @@
     </div>
     <div class="last">
         <div class="date">
-            <P><B>Date:</B> 20 May 2021</P>
+            <P><B>Date:</B> 30 June 2021</P>
             <p><b>Place:</b>Bareilly</p>
         </div>
         <div class="name">
             <p>AKHILESH GANGWAR</p>
         </div>
     </div>
+
+    <footer>
+        <h4>Designed By Akhilesh Gangwar</h4>
+        <hr>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/akhilesh-gangwar/" target="_blank"><i
+                        class="fab fa-linkedin footer-icon"></i></a></li>
+            <li><a href="https://www.facebook.com/theakhilesh24" target="_blank"><i
+                        class="fab fa-facebook footer-icon"></i></a></li>
+            <li><a href="https://www.instagram.com/akhilesh.gangwar.24/" target="_blank"><i
+                        class="fab fa-instagram footer-icon"></i></a></li>
+            <li><a href="https://wa.me/+917983580439" target="_blank"><i class="fab fa-whatsapp footer-icon"></i></a>
+            </li>
+        </ul>
+        <hr>
+        <h4>Copyright &copy; <a href="http://akhilesh.epizy.com/?i=1">Akhilesh Gangwar</a></h4>
+    </footer>
 </body>
 
 </html>
