--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <tr>
             <th>Examination Passed</th>
             <th>Name of the University</th>
-            <th>Month & Year of passing</th>
+            <th>Year of passing</th>
             <th>Percentage of Marks</th>
         </tr>
         <tr>
