--- a/index.html
+++ b/index.html
@@ -131,16 +131,17 @@
     <footer>
         <h4>Designed By Akhilesh Gangwar</h4>
         <hr>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/akhilesh-gangwar/" target="_blank"><i
-                        class="fab fa-linkedin footer-icon"></i></a></li>
-            <li><a href="https://www.facebook.com/theakhilesh24" target="_blank"><i
-                        class="fab fa-facebook footer-icon"></i></a></li>
-            <li><a href="https://www.instagram.com/akhilesh.gangwar.24/" target="_blank"><i
-                        class="fab fa-instagram footer-icon"></i></a></li>
-            <li><a href="https://wa.me/+917983580439" target="_blank"><i class="fab fa-whatsapp footer-icon"></i></a>
-            </li>
-        </ul>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/akhilesh-gangwar/" target="_blank"><i
+                            class="fab fa-linkedin footer-icon"></i></a></li>
+                <li><a href="https://www.facebook.com/theakhilesh24" target="_blank"><i
+                            class="fab fa-facebook footer-icon"></i></a></li>
+                <li><a href="https://www.instagram.com/akhilesh.gangwar.24/" target="_blank"><i
+                            class="fab fa-instagram footer-icon"></i></a></li>
+                <li><a href="https://wa.me/+917983580439" target="_blank"><i
+                            class="fab fa-whatsapp footer-icon"></i></a>
+                </li>
+            </ul>
         <hr>
         <h4>Copyright &copy; <a href="http://akhilesh.epizy.com/?i=1">Akhilesh Gangwar</a></h4>
     </footer>
